Fixed google icon not showing and created following/er

--- a/BagsForYou/static-path/css/admin-styling.css
+++ b/BagsForYou/static-path/css/admin-styling.css
@@ -1,6 +1,7 @@
 .main-menu {
   border: 2px solid black;
   border-radius: 3px;
+  background-color: #ccd7ff;
 }
 .admin-panel {
   padding: 0 auto;
@@ -13,20 +14,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #dcdcdc;
+  background-color: #ffc8c8;
   padding: 1rem 0;
 }
 
 .menu-icon {
   height: 3rem;
-  fill: #0038ff;
+  fill: #313131;
 }
 .admin-button a {
+  color: #5755b4;
   padding-top: 1rem;
 }
 
 .recent {
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 4em 1fr 1fr;
+  overflow-y: scroll;
+  height: 610px;
+  padding: 0.5rem;
   gap: 0.5rem;
 }
 
@@ -38,6 +44,7 @@
   border: 1px solid black;
   border-radius: 3px;
   padding: 1rem;
+  background-color: rgb(224, 238, 171);
 }
 .rec-bag img {
   max-width: 8rem;
